# sn360-agent-device

./: 0001-feat-Phase-1-Foundation-Wazuh-Desktop-Agent.patch  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  PHASES.md  PHASE_STATUS.md  PROGRESS.md  PROPOSAL.md  README.md  TEST_RESULTS.md  benchmark-results.md  device-agent-proposal.md  e2e-results.txt  flight-path-3d.html  flight-replay-3d.html  security-e2e-results.txt  test-results.md  unit-test-results.txt  wazuh-lightweight-agent-proposal.md  wazuh-lightweight-agent-proposal.patch
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
crates/sda-active-response/src/: lib.rs
crates/sda-active-response/src/actions/: firewall_drop.rs  kill_process.rs
crates/sda-agent/: Cargo.toml
crates/sda-agent/src/: main.rs  privilege.rs  tamper.rs
crates/sda-comms/: Cargo.toml
crates/sda-comms/src/: lib.rs  protocol.rs
crates/sda-comms/src/transport/: http2.rs  tls.rs
crates/sda-core/src/: config.rs  power.rs
crates/sda-enhanced-inventory/src/: lib.rs
crates/sda-enhanced-inventory/tests/: sbom_integration.rs
crates/sda-event-bus/src/: bus.rs
crates/sda-fim/src/: debounce.rs  lib.rs  scanner.rs  watcher.rs
crates/sda-fim/tests/: baseline_scan_integration.rs
crates/sda-local-detection/src/: lib.rs
crates/sda-logcollector/src/: file_reader.rs  journal_reader.rs
crates/sda-pal/src/: power.rs
crates/sda-rootcheck/: Cargo.toml
crates/sda-rootcheck/src/: hidden_process.rs  lib.rs
crates/sda-updater/src/: checker.rs  lib.rs
crates/wda-active-response/: Cargo.toml
crates/wda-active-response/src/: executor.rs  lib.rs
crates/wda-active-response/src/actions/: disable_account.rs  firewall_drop.rs  kill_process.rs
crates/wda-agent/: Cargo.toml
crates/wda-agent/src/: main.rs  privilege.rs  tamper.rs
crates/wda-comms/: Cargo.toml
crates/wda-comms/src/: blowfish_wazuh.rs  connection.rs  crypto.rs  enrollment.rs  keepalive.rs  lib.rs  protocol.rs
crates/wda-core/: Cargo.toml
crates/wda-core/src/: agent.rs  config.rs  lib.rs  power.rs  signal.rs
crates/wda-enhanced-inventory/: Cargo.toml
crates/wda-enhanced-inventory/src/: browser_extensions.rs  lib.rs  running_software.rs  sbom.rs
crates/wda-enhanced-inventory/tests/: browser_extensions_integration.rs  sbom_integration.rs
crates/wda-event-bus/: Cargo.toml
crates/wda-event-bus/src/: event.rs  lib.rs
crates/wda-fim/: Cargo.toml
crates/wda-fim/examples/: burst_watcher.rs
crates/wda-fim/src/: batcher.rs  config.rs  db.rs  debounce.rs  event_format.rs  hasher.rs  lib.rs  rate_limiter.rs  scanner.rs  state_db.rs  watcher.rs
crates/wda-fim/tests/: baseline_scan_integration.rs  burst_workload.rs  fim_integration.rs  integration.rs
crates/wda-inventory/: Cargo.toml
crates/wda-inventory/src/: hardware.rs  lib.rs  network.rs  os_info.rs  packages.rs  syscollector_format.rs
crates/wda-local-detection/: Cargo.toml
crates/wda-local-detection/src/: behavioral.rs  lib.rs  offline_queue.rs  response.rs  rule_store.rs  yara_scanner.rs
crates/wda-logcollector/: Cargo.toml  build.rs
crates/wda-logcollector/src/: batch.rs  file_reader.rs  journal_reader.rs  lib.rs  oslog_reader.rs  state.rs  windows_eventlog.rs  windows_eventlog_parser.rs
crates/wda-pal/: Cargo.toml
crates/wda-pal/src/: lib.rs  power.rs
crates/wda-rootcheck/: Cargo.toml
crates/wda-rootcheck/src/: hidden_process.rs  lib.rs  signatures.rs
crates/wda-sca/: Cargo.toml
crates/wda-sca/policies/: basic_security.yaml
crates/wda-sca/src/: lib.rs
crates/wda-updater/: Cargo.toml
crates/wda-updater/src/: checker.rs  installer.rs  lib.rs
crates/wda-updater/tests/: checker_http.rs
docs/: admin-guide.md  architecture.md  configuration-reference.md  integration.md  platform-testing.md  proprietary-licensing-rationale.md  revised-phase-plan.md  security-audit.md  user-guide.md
docs/known-issues/: fim-burst-workload-macos-ci.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: msgpack_event_decode.rs
packaging/: README.md
packaging/config/: config.yaml
packaging/debian/: build-deb.sh  conffiles  control  postinst  postrm  preinst  prerm
packaging/macos/: build-pkg.sh  com.sn360.desktop-agent.plist  com.wazuh.desktop-agent.plist
packaging/macos/scripts/: postinstall  preinstall
packaging/rpm/: build-rpm.sh  wda-agent.spec
packaging/systemd/: sda-agent.service  wda-agent.service
packaging/windows/: build-msi.ps1  sda-agent.wxs  wda-agent.wxs
tests/: README.md  docker-compose.yml  wazuh-test-config-macos.yaml  wazuh-test-config-windows.yaml  wazuh-test-config.yaml
tests/scripts/: benchmark-regression.sh  benchmark.sh  fim-burst-bench.sh  micro-benchmark.sh  run-e2e-macos.sh  run-e2e-windows.ps1  run-e2e.sh  run-security-e2e.sh
