[workspace]
members = [
    "crates/wda-core",
    "crates/wda-pal",
    "crates/wda-event-bus",
    "crates/wda-comms",
    "crates/wda-fim",
    "crates/wda-logcollector",
    "crates/wda-inventory",
    "crates/wda-sca",
    "crates/wda-active-response",
    "crates/wda-rootcheck",
    "crates/wda-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Wazuh Desktop Agent Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "io-util", "net", "time", "process", "signal", "sync", "macros", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto
ring = "0.17"
aes = "0.8"
cbc = "0.1"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Filesystem watching
notify = "7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
md-5 = "0.10"
flate2 = "1"
gethostname = "0.5"
socket2 = { version = "0.5", features = ["all"] }

# Unix-specific
nix = { version = "0.29", features = ["inotify", "signal", "user", "fs", "process", "net"] }

# Internal crates
wda-core = { path = "crates/wda-core" }
wda-pal = { path = "crates/wda-pal" }
wda-event-bus = { path = "crates/wda-event-bus" }
wda-comms = { path = "crates/wda-comms" }
wda-fim = { path = "crates/wda-fim" }
wda-logcollector = { path = "crates/wda-logcollector" }
wda-inventory = { path = "crates/wda-inventory" }
wda-sca = { path = "crates/wda-sca" }
wda-active-response = { path = "crates/wda-active-response" }
wda-rootcheck = { path = "crates/wda-rootcheck" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
