[workspace]
members = [
    "crates/wda-core",
    "crates/wda-pal",
    "crates/wda-event-bus",
    "crates/wda-comms",
    "crates/wda-fim",
    "crates/wda-logcollector",
    "crates/wda-inventory",
    "crates/wda-sca",
    "crates/wda-active-response",
    "crates/wda-rootcheck",
    "crates/wda-agent",
    "crates/wda-local-detection",
    "crates/wda-enhanced-inventory",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Wazuh Desktop Agent Contributors"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "io-util", "net", "time", "process", "signal", "sync", "macros", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto
ring = "0.17"
aes = "0.8"
cbc = "0.1"

# TLS
# Use `ring` as the crypto backend instead of the default `aws_lc_rs` to avoid
# pulling in the large/slow-to-compile aws-lc-sys crate. `ring` is already a
# workspace dependency used elsewhere in the project.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Filesystem watching
notify = "7"

# Database
# Disable default features (which pull in `modern_sqlite` and various extension
# shims) and only enable `bundled` for a minimal, statically-linked SQLite.
rusqlite = { version = "0.32", default-features = false, features = ["bundled"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
md-5 = "0.10"
flate2 = "1"
gethostname = "0.5"
socket2 = { version = "0.5", features = ["all"] }

# Unix-specific
nix = { version = "0.29", features = ["inotify", "signal", "user", "fs", "process", "net"] }

# Windows-specific
windows = { version = "0.58", features = [
    "Win32_System_EventLog",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
] }

# Internal crates
wda-core = { path = "crates/wda-core" }
wda-pal = { path = "crates/wda-pal" }
wda-event-bus = { path = "crates/wda-event-bus" }
wda-comms = { path = "crates/wda-comms" }
wda-fim = { path = "crates/wda-fim" }
wda-logcollector = { path = "crates/wda-logcollector" }
wda-inventory = { path = "crates/wda-inventory" }
wda-sca = { path = "crates/wda-sca" }
wda-active-response = { path = "crates/wda-active-response" }
wda-rootcheck = { path = "crates/wda-rootcheck" }
wda-local-detection = { path = "crates/wda-local-detection" }
wda-enhanced-inventory = { path = "crates/wda-enhanced-inventory" }

# Detection & inventory
aho-corasick = "1"
bloomfilter = "1"
indexmap = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

# CI-oriented release profile: same optimizations as `release` but with
# thin LTO and multiple codegen units for dramatically faster compile
# times. Used by the CI `build` and `e2e` jobs where wall-clock time
# matters more than the last few percent of binary size. The final
# release binary (fat LTO, 1 codegen unit) is built by the dedicated
# release/tag workflow using `--release`.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4

[profile.release-small]
inherits = "release"
