[package]
name = "sda-rootcheck"
description = "Rootkit detection module for SDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sda-event-bus = { workspace = true }
sda-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread"] }
