[package]
name = "wda-agent"
description = "Binary entry point for Wazuh Desktop Agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wda-agent"
path = "src/main.rs"

[dependencies]
wda-core = { workspace = true }
wda-comms = { workspace = true }
wda-event-bus = { workspace = true }
wda-pal = { workspace = true }
wda-fim = { workspace = true }
wda-logcollector = { workspace = true, features = ["linux-journal"] }
wda-inventory = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
gethostname = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
