[package]
name = "wda-comms"
description = "Communication layer for WDA - Wazuh server protocol implementation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wda-core = { workspace = true }
wda-event-bus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ring = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
