[package]
name = "wda-enhanced-inventory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wda-core = { workspace = true }
wda-event-bus = { workspace = true }
wda-pal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
