[package]
name = "wda-fim"
description = "File Integrity Monitoring module for WDA"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wda-event-bus = { workspace = true }
wda-pal = { workspace = true }
wda-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
