[package]
name = "wda-local-detection"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wda-core = { workspace = true }
wda-event-bus = { workspace = true }
wda-pal = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
aho-corasick = { workspace = true }
bloomfilter = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
yara = ["dep:yara"]

[dependencies.yara]
version = "0.28"
optional = true
